fixed date selector overflow

--- a/css/tomato.css
+++ b/css/tomato.css
@@ -62,6 +62,7 @@ body {
   width: 100%;
   justify-content: center;
   padding: .5rem 1rem 1.25rem;
+  overflow: hidden;
 }
 
 .taa-dashboard-date-selector__page {
